changed button name

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <!-- Accent-colored raised button with ripple -->
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
           onclick="calculate()" type="button">
-          Show final price
+          Recommend me!!!
         </button>
       </form>
       <br />
