--- a/index.html
+++ b/index.html
@@ -173,15 +173,15 @@
 
          <!-- Final Question -->
 
-         <p>6. Ongoing story or each episode different?</p>
+         <p>7. Ongoing story or each episode different?</p>
 
-         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="tone3">
-          <input type="radio" id="tone3" class="mdl-radio__button" name="tone" value="mixed" />
+         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="story1">
+          <input type="radio" id="story1" class="mdl-radio__button" name="story" value="serialized" />
           <span class="mdl-radio__label">A mix of the two</span>
         </label>
 
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="tone3">
-          <input type="radio" id="tone3" class="mdl-radio__button" name="tone" value="mixed" />
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="story2">
+          <input type="radio" id="story2" class="mdl-radio__button" name="story" value="episodic" />
           <span class="mdl-radio__label">A mix of the two</span>
         </label>
 
