--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </label>
 
       <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="setting3">
-          <input type="radio" id="setting3" class="mdl-radio__button" name="setting" value="sci-fi" />
+          <input type="radio" id="setting3" class="mdl-radio__button" name="setting" value="scifi" />
           <span class="mdl-radio__label">Sci-fi/Futuristic</span>
         </label>
 
@@ -167,7 +167,7 @@
         </label>
 
          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="tone3">
-          <input type="radio" id="tone3" class="mdl-radio__button" name="tone" value="mixed" />
+          <input type="radio" id="tone3" class="mdl-radio__button" name="tone" value="serious" />
           <span class="mdl-radio__label">A mix of the two</span>
         </label>
 
