--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
 
          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="story1">
           <input type="radio" id="story1" class="mdl-radio__button" name="story" value="serialized" />
-          <span class="mdl-radio__label">A mix of the two</span>
+          <span class="mdl-radio__label">Serialized</span>
         </label>
 
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="story2">
           <input type="radio" id="story2" class="mdl-radio__button" name="story" value="episodic" />
-          <span class="mdl-radio__label">A mix of the two</span>
+          <span class="mdl-radio__label">Episodic</span>
         </label>
 
 
