tried to fix some errors

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 
           <p>4. Language Preference?</p>
          
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="lenguage1">
-          <input type="radio" id="lenguage1" class="mdl-radio__button" name="language" value="dubbed" />
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="language1">
+          <input type="radio" id="language1" class="mdl-radio__button" name="language" value="dubbed" />
           <span class="mdl-radio__label">English Dub</span>
         </label>
 
