--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
        <p>6. The tone of the tvshow?</p>
 
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="tone1">
-          <input type="radio" id="ton1" class="mdl-radio__button" name="tone" value="lighthearted" />
+          <input type="radio" id="tone1" class="mdl-radio__button" name="tone" value="lighthearted" />
           <span class="mdl-radio__label">Lighthearted</span>
         </label>
         
