--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </label>
 
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="language2">
-          <input type="radio" id="language2" class="mdl-radio__button" name="language" value="Subtitles" />
+          <input type="radio" id="language2" class="mdl-radio__button" name="language" value="subtitles" />
           <span class="mdl-radio__label">Subtitles</span>
         </label>
         
