--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
       </div>
     </header>
     <main class="mdl-layout__content">
-      <div class="right-image">
-        <img src="./images/cookies.png" alt="image of cookies logo" />
-      </div>
-      <div class="page-content">How many cookies in what flavour would you like to order?</div>
+      <div class="page-content">Please answer questions bellow based on entertainment preferences!</div>
       <br />
       <form>
         <br />
