fixed spelling error

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
           <!-- Sixth Question -->
 
-          <p>6. The tone of the tvshow?</p>
+          <p>6. The tone of the show?</p>
 
           <label
             class="mdl-radio mdl-js-radio mdl-js-ripple-effect"
